addred cropped images to replace images in configuration.md, fixed duplicated alt text, added box-shadow to images

--- a/website/assets/styles/pages/docs/basic-documentation.less
+++ b/website/assets/styles/pages/docs/basic-documentation.less
@@ -390,8 +390,9 @@
         max-width: 100%;
         height: auto;
         margin: auto;
-        padding-top: 24px;
-        padding-bottom: 24px;
+        margin-top: 24px;
+        margin-bottom: 24px;
+        box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.2);
       }
 
       h1 + ul {
